--- a/users/templates/result.html
+++ b/users/templates/result.html
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5; http://localhost:8000/match/{{ news.id }}" />  {% comment %} 5秒後に指定のURLへリダイレクト {% endcomment %}
     <title>News</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,8 +14,8 @@
         <h1>INIAD Infomation</h1>
     </header>
     <div class="main">
-        <h2>{{ news.title }}</h2>
-        <p>{{ news.text }}</p>
+        <h2>{{ user.mail }}</h2>
+        <h2>{{ reaction }}</h2>
     </div>
 
 
