--- a/users/templates/univ.html
+++ b/users/templates/univ.html
@@ -19,8 +19,7 @@
         <p>{{ news.text }}</p>
 
         <br>
-        <p class="request">※ オンラインを希望する場合は左手を　　　　</p>
-        <p class="request">　 対面を希望する場合は右手を挙げてください</p>
+        <p class="request">※ オンラインを希望する場合は左手を　　　<br>　　 対面を希望する場合は右手を挙げてください</p>
 
         <div class="reaction">
             <img src="{% static 'images/online.png' %}" class="icon check">
