リアクション後のメッセージの修正

--- a/users/templates/result.html
+++ b/users/templates/result.html
@@ -16,7 +16,7 @@
     </header>
     <div class="main">
         <h2>{{ user.mail }}</h2>
-        {% if news == 1 %}
+        {% if news ==  "1" %}
             {% if reaction == "ok" %}
                 <h2>対面希望</h2>
             {% else %}
